# GramExt-Windows

./: README.md
Telegram/: CMakeLists.txt  reconfigure.bat
Telegram/Resources/langs/: lang.strings
Telegram/SourceFiles/: mainwindow.cpp
Telegram/SourceFiles/ui/controls/: who_reacted_context_action.cpp
Telegram/SourceFiles/window/: window_controller.h  window_main_menu.cpp  window_session_controller.cpp  window_session_controller.h
Telegram/lib_ext/: CMakeLists.txt
Telegram/lib_ext/ext/Controller/: Controller.cpp  Controller.h  js_list.h  js_sdk.h
Telegram/lib_ext/ext/Extension/: Extension.cpp  Extension.h
Telegram/lib_ext/ext/UI/: ExtensionsListWindow.cpp  ExtensionsListWindow.h
Telegram/lib_ext/ext/tiny-js/: LICENSE  TinyJS-Functions.cpp  TinyJS-MathFunctions.cpp  TinyJS.cpp  TinyJS.h  TinyJS_Functions.h
